wrims_v2/wrims_v2/src/wrimsv2/evaluator/ValueEvaluatorTreeParser.java
// $ANTLR 3.5.2 ValueEvaluatorTree.g 2024-02-12 13:09:12

  package wrimsv2.evaluator;
    
  import org.antlr.runtime.ANTLRFileStream;
  import org.antlr.runtime.CharStream;
  import org.antlr.runtime.CommonTokenStream;
  import org.antlr.runtime.RecognitionException;
  import org.antlr.runtime.TokenStream;
  
  import java.util.HashMap;
  import wrimsv2.components.Error;
  import wrimsv2.components.IntDouble;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ValueEvaluatorTreeParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABS", "ALWAYS", "BACKSLASH", 
		"CASE", "COMMENT", "CONDITION", "CONSTRAIN", "CONVERTUNITS", "CYCLE", 
		"DAYSIN", "DIGIT", "DVAR", "EXP", "EXPRESSION", "FILE", "FLOAT", "FROM", 
		"FROM_WRESL_FILE", "FUNCTION", "GIVEN", "IDENT", "IDENT1", "IDENT2", "INCLUDE", 
		"INT", "INTEGER", "INTEGERTYPE", "LETTER", "LHSGTRHS", "LHSLTRHS", "LOG", 
		"LOG10", "LOWERBOUND", "LOWERUNBOUNDED", "MAX", "MIN", "MOD", "MONTH", 
		"MONTH_CONST", "MULTILINE_COMMENT", "NAME", "ORDER", "OUTPUT", "PASTMONTH", 
		"POW", "RANGE", "REAL", "SELECT", "SUM", "SVAR", "SYMBOLS", "TAFCFS", 
		"TIMESERIES", "TYPE", "UNARY", "UNITS", "UPPERBOUND", "UPPERUNBOUNDED", 
		"USE", "WEIGHT", "WHERE", "WS", "YEAR", "'('", "')'", "'*'", "'+'", "'-'", 
		"'.'", "'.and.'", "'.or.'", "'/'", "':'", "';'", "'<'", "'<='", "'='", 
		"'=='", "'>'", "'>='", "'['", "']'", "'c:'", "'v:'", "'|'"
	};
	public static final int EOF=-1;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int ABS=4;
	public static final int ALWAYS=5;
	public static final int BACKSLASH=6;
	public static final int CASE=7;
	public static final int COMMENT=8;
	public static final int CONDITION=9;
	public static final int CONSTRAIN=10;
	public static final int CONVERTUNITS=11;
	public static final int CYCLE=12;
	public static final int DAYSIN=13;
	public static final int DIGIT=14;
	public static final int DVAR=15;
	public static final int EXP=16;
	public static final int EXPRESSION=17;
	public static final int FILE=18;
	public static final int FLOAT=19;
	public static final int FROM=20;
	public static final int FROM_WRESL_FILE=21;
	public static final int FUNCTION=22;
	public static final int GIVEN=23;
	public static final int IDENT=24;
	public static final int IDENT1=25;
	public static final int IDENT2=26;
	public static final int INCLUDE=27;
	public static final int INT=28;
	public static final int INTEGER=29;
	public static final int INTEGERTYPE=30;
	public static final int LETTER=31;
	public static final int LHSGTRHS=32;
	public static final int LHSLTRHS=33;
	public static final int LOG=34;
	public static final int LOG10=35;
	public static final int LOWERBOUND=36;
	public static final int LOWERUNBOUNDED=37;
	public static final int MAX=38;
	public static final int MIN=39;
	public static final int MOD=40;
	public static final int MONTH=41;
	public static final int MONTH_CONST=42;
	public static final int MULTILINE_COMMENT=43;
	public static final int NAME=44;
	public static final int ORDER=45;
	public static final int OUTPUT=46;
	public static final int PASTMONTH=47;
	public static final int POW=48;
	public static final int RANGE=49;
	public static final int REAL=50;
	public static final int SELECT=51;
	public static final int SUM=52;
	public static final int SVAR=53;
	public static final int SYMBOLS=54;
	public static final int TAFCFS=55;
	public static final int TIMESERIES=56;
	public static final int TYPE=57;
	public static final int UNARY=58;
	public static final int UNITS=59;
	public static final int UPPERBOUND=60;
	public static final int UPPERUNBOUNDED=61;
	public static final int USE=62;
	public static final int WEIGHT=63;
	public static final int WHERE=64;
	public static final int WS=65;
	public static final int YEAR=66;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ValueEvaluatorTreeParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ValueEvaluatorTreeParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ValueEvaluatorTreeParser.tokenNames; }
	@Override public String getGrammarFileName() { return "ValueEvaluatorTree.g"; }


	 
	  @Override
	  public void reportError(RecognitionException e) {
	       Error.addEvaluationError(getErrorMessage(e, tokenNames));
	  }


	public static class evaluator_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "evaluator"
	// ValueEvaluatorTree.g:35:1: evaluator : ( expressionInput | conditionInput );
	public final ValueEvaluatorTreeParser.evaluator_return evaluator() throws RecognitionException {
		ValueEvaluatorTreeParser.evaluator_return retval = new ValueEvaluatorTreeParser.evaluator_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope expressionInput1 =null;
		ParserRuleReturnScope conditionInput2 =null;


		try {
			// ValueEvaluatorTree.g:36:2: ( expressionInput | conditionInput )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==87) ) {
				alt1=1;
			}
			else if ( (LA1_0==86) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// ValueEvaluatorTree.g:36:4: expressionInput
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_expressionInput_in_evaluator61);
					expressionInput1=expressionInput();
					state._fsp--;

					adaptor.addChild(root_0, expressionInput1.getTree());

					}
					break;
				case 2 :
					// ValueEvaluatorTree.g:37:3: conditionInput
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_conditionInput_in_evaluator67);
					conditionInput2=conditionInput();
					state._fsp--;

					adaptor.addChild(root_0, conditionInput2.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "evaluator"


	public static class expressionInput_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expressionInput"
	// ValueEvaluatorTree.g:44:1: expressionInput : 'v:' expressionCollection -> ^( 'v:' expressionCollection ) ;
	public final ValueEvaluatorTreeParser.expressionInput_return expressionInput() throws RecognitionException {
		ValueEvaluatorTreeParser.expressionInput_return retval = new ValueEvaluatorTreeParser.expressionInput_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal3=null;
		ParserRuleReturnScope expressionCollection4 =null;

		CommonTree string_literal3_tree=null;
		RewriteRuleTokenStream stream_87=new RewriteRuleTokenStream(adaptor,"token 87");
		RewriteRuleSubtreeStream stream_expressionCollection=new RewriteRuleSubtreeStream(adaptor,"rule expressionCollection");

		try {
			// ValueEvaluatorTree.g:44:16: ( 'v:' expressionCollection -> ^( 'v:' expressionCollection ) )
			// ValueEvaluatorTree.g:44:18: 'v:' expressionCollection
			{
			string_literal3=(Token)match(input,87,FOLLOW_87_in_expressionInput81);  
			stream_87.add(string_literal3);

			pushFollow(FOLLOW_expressionCollection_in_expressionInput83);
			expressionCollection4=expressionCollection();
			state._fsp--;

			stream_expressionCollection.add(expressionCollection4.getTree());
			// AST REWRITE
			// elements: 87, expressionCollection
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 44:43: -> ^( 'v:' expressionCollection )
			{
				// ValueEvaluatorTree.g:44:46: ^( 'v:' expressionCollection )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot(stream_87.nextNode(), root_1);
				adaptor.addChild(root_1, stream_expressionCollection.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expressionInput"


	public static class conditionInput_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "conditionInput"
	// ValueEvaluatorTree.g:45:1: conditionInput : 'c:' conditionStatement -> ^( 'c:' conditionStatement ) ;
	public final ValueEvaluatorTreeParser.conditionInput_return conditionInput() throws RecognitionException {
		ValueEvaluatorTreeParser.conditionInput_return retval = new ValueEvaluatorTreeParser.conditionInput_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal5=null;
		ParserRuleReturnScope conditionStatement6 =null;

		CommonTree string_literal5_tree=null;
		RewriteRuleTokenStream stream_86=new RewriteRuleTokenStream(adaptor,"token 86");
		RewriteRuleSubtreeStream stream_conditionStatement=new RewriteRuleSubtreeStream(adaptor,"rule conditionStatement");

		try {
			// ValueEvaluatorTree.g:45:15: ( 'c:' conditionStatement -> ^( 'c:' conditionStatement ) )
			// ValueEvaluatorTree.g:45:17: 'c:' conditionStatement
			{
			string_literal5=(Token)match(input,86,FOLLOW_86_in_conditionInput96);  
			stream_86.add(string_literal5);

			pushFollow(FOLLOW_conditionStatement_in_conditionInput98);
			conditionStatement6=conditionStatement();
			state._fsp--;

			stream_conditionStatement.add(conditionStatement6.getTree());
			// AST REWRITE
			// elements: 86, conditionStatement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 45:40: -> ^( 'c:' conditionStatement )
			{
				// ValueEvaluatorTree.g:45:43: ^( 'c:' conditionStatement )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot(stream_86.nextNode(), root_1);
				adaptor.addChild(root_1, stream_conditionStatement.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "conditionInput"


	public static class lhsrhs_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "lhsrhs"
	// ValueEvaluatorTree.g:50:1: lhsrhs : ( expression | CONSTRAIN );
	public final ValueEvaluatorTreeParser.lhsrhs_return lhsrhs() throws RecognitionException {
		ValueEvaluatorTreeParser.lhsrhs_return retval = new ValueEvaluatorTreeParser.lhsrhs_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token CONSTRAIN8=null;
		ParserRuleReturnScope expression7 =null;

		CommonTree CONSTRAIN8_tree=null;

		try {
			// ValueEvaluatorTree.g:50:7: ( expression | CONSTRAIN )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==ABS||LA2_0==DAYSIN||LA2_0==EXP||LA2_0==FLOAT||LA2_0==IDENT||(LA2_0 >= INT && LA2_0 <= INTEGER)||(LA2_0 >= LOG && LA2_0 <= LOG10)||(LA2_0 >= MAX && LA2_0 <= MIN)||(LA2_0 >= MONTH && LA2_0 <= MONTH_CONST)||(LA2_0 >= PASTMONTH && LA2_0 <= POW)||LA2_0==REAL||LA2_0==SVAR||LA2_0==TAFCFS||(LA2_0 >= YEAR && LA2_0 <= 67)||LA2_0==71) ) {
				alt2=1;
			}
			else if ( (LA2_0==CONSTRAIN) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// ValueEvaluatorTree.g:50:9: expression
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_expression_in_lhsrhs115);
					expression7=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression7.getTree());

					}
					break;
				case 2 :
					// ValueEvaluatorTree.g:50:20: CONSTRAIN
					{
					root_0 = (CommonTree)adaptor.nil();


					CONSTRAIN8=(Token)match(input,CONSTRAIN,FOLLOW_CONSTRAIN_in_lhsrhs117); 
					CONSTRAIN8_tree = (CommonTree)adaptor.create(CONSTRAIN8);
					adaptor.addChild(root_0, CONSTRAIN8_tree);

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "lhsrhs"


	public static class units_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "units"
	// ValueEvaluatorTree.g:54:1: units : ( IDENT | ( IDENT '/' IDENT ) );
	public final ValueEvaluatorTreeParser.units_return units() throws RecognitionException {
		ValueEvaluatorTreeParser.units_return retval = new ValueEvaluatorTreeParser.units_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token IDENT9=null;
		Token IDENT10=null;
		Token char_literal11=null;
		Token IDENT12=null;

		CommonTree IDENT9_tree=null;
		CommonTree IDENT10_tree=null;
		CommonTree char_literal11_tree=null;
		CommonTree IDENT12_tree=null;

		try {
			// ValueEvaluatorTree.g:54:6: ( IDENT | ( IDENT '/' IDENT ) )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==IDENT) ) {
				int LA3_1 = input.LA(2);
				if ( (LA3_1==75) ) {
					alt3=2;
				}
				else if ( (LA3_1==EOF) ) {
					alt3=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// ValueEvaluatorTree.g:54:8: IDENT
					{
					root_0 = (CommonTree)adaptor.nil();


					IDENT9=(Token)match(input,IDENT,FOLLOW_IDENT_in_units126); 
					IDENT9_tree = (CommonTree)adaptor.create(IDENT9);
					adaptor.addChild(root_0, IDENT9_tree);

					}
					break;
				case 2 :
					// ValueEvaluatorTree.g:54:14: ( IDENT '/' IDENT )
					{
					root_0 = (CommonTree)adaptor.nil();


					// ValueEvaluatorTree.g:54:14: ( IDENT '/' IDENT )
					// ValueEvaluatorTree.g:54:15: IDENT '/' IDENT
					{
					IDENT10=(Token)match(input,IDENT,FOLLOW_IDENT_in_units129); 
					IDENT10_tree = (CommonTree)adaptor.create(IDENT10);
					adaptor.addChild(root_0, IDENT10_tree);

					char_literal11=(Token)match(input,75,FOLLOW_75_in_units131); 
					char_literal11_tree = (CommonTree)adaptor.create(char_literal11);
					adaptor.addChild(root_0, char_literal11_tree);

					IDENT12=(Token)match(input,IDENT,FOLLOW_IDENT_in_units133); 
					IDENT12_tree = (CommonTree)adaptor.create(IDENT12);
					adaptor.addChild(root_0, IDENT12_tree);

					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "units"


	public static class fileName_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "fileName"
	// ValueEvaluatorTree.g:56:1: fileName : ( ':' | ';' | '.' | '|' | SYMBOLS | '-' | '+' | BACKSLASH | IDENT | IDENT1 | IDENT2 | INTEGER | FLOAT | usedKeywords )+ ;
	public final ValueEvaluatorTreeParser.fileName_return fileName() throws RecognitionException {
		ValueEvaluatorTreeParser.fileName_return retval = new ValueEvaluatorTreeParser.fileName_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal13=null;
		Token char_literal14=null;
		Token char_literal15=null;
		Token char_literal16=null;
		Token SYMBOLS17=null;
		Token char_literal18=null;
		Token char_literal19=null;
		Token BACKSLASH20=null;
		Token IDENT21=null;
		Token IDENT122=null;
		Token IDENT223=null;
		Token INTEGER24=null;
		Token FLOAT25=null;
		ParserRuleReturnScope usedKeywords26 =null;

		CommonTree char_literal13_tree=null;
		CommonTree char_literal14_tree=null;
		CommonTree char_literal15_tree=null;
		CommonTree char_literal16_tree=null;
		CommonTree SYMBOLS17_tree=null;
		CommonTree char_literal18_tree=null;
		CommonTree char_literal19_tree=null;
		CommonTree BACKSLASH20_tree=null;
		CommonTree IDENT21_tree=null;
		CommonTree IDENT122_tree=null;
		CommonTree IDENT223_tree=null;
		CommonTree INTEGER24_tree=null;
		CommonTree FLOAT25_tree=null;
